Stop long author names from overflowing buttons

--- a/src/components/TrackList/TrackSource.scss
+++ b/src/components/TrackList/TrackSource.scss
@@ -1,5 +1,6 @@
 .track-source-container {
   p {
     margin-bottom: 4px;
+    word-wrap: break-word;
   }
 }
